Actually drop some HTML

--- a/index.html
+++ b/index.html
@@ -1,7 +1,36 @@
 <html>
 <head>
+  <title>jclocks @ github - landing page</title>
+  <style>
+      @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+      html {
+             background-color: #222222;
+           }
+      body {
+             font-family: sans, 'Roboto';
+             max-width: 1200px;
+             margin: auto;
+             padding-top: 15px;
+             color: #DDDDDD;
+           }
+      h2 {
+           font-weight: normal;
+         }
+      h3 {
+           font-weight: normal;
+      }
+      a {
+          color: #444444;
+        }
+    </style>
 </head>
 <body>
-<p>Narf!</p>
+  <h1>Hi!</h1>
+  <h2>Johnny Tirado | jclocks @ github</h2>
+  <hr>
+  <p>This is a simple static page to basically say hello. I might blog a bit on this. This is also meant to be a landing page to my various repos here.</p>
+  <p>My name is Johnny and I back up and revive servers for a living, and am a computer technician by career, though I might want to get into the engineering side of things soon. On the side I like to learn about all things Linux, and that involves learning programming languages and development.</p>
+  <p>This site may or may not get updated, I'm a bit fickle with that kind of stuff.</p>
+  <p><a href="#">Hit me.</a></p>
 </body>
 </html>
