--- a/index.html
+++ b/index.html
@@ -1,28 +1,7 @@
 <html>
 <head>
   <title>jclocks @ github - landing page</title>
-  <style>
-      @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-      html {
-             background-color: #222222;
-           }
-      body {
-             font-family: sans, 'Roboto';
-             max-width: 1200px;
-             margin: auto;
-             padding-top: 15px;
-             color: #DDDDDD;
-           }
-      h2 {
-           font-weight: normal;
-         }
-      h3 {
-           font-weight: normal;
-      }
-      a {
-          color: #444444;
-        }
-    </style>
+  <link rel="stylesheet" type="text/css" href="defailt.css">
 </head>
 <body>
   <h1>Hi!</h1>
