It would help if I typed correctly

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
 <head>
   <title>jclocks @ github - landing page</title>
-  <link rel="stylesheet" type="text/css" href="defailt.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+  </style>
+  <link rel="stylesheet" type="text/css" href="default.css">
 </head>
 <body>
   <h1>Hi!</h1>
