--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
   </style>
   <link rel="stylesheet" type="text/css" href="default.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <h1>Hi!</h1>
   <h3>Johnny Tirado | jclocks @ github</h3>
-  <hr>
+  <div class="navbar">
+    <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
+    <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
+    <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+    <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+  </div>
   <p>This is a simple static page to basically say hello. I might blog a bit on this. This is also meant to be a landing page to my various repos here.</p>
   <p>My name is Johnny and I back up and revive servers for a living, and am a computer technician by career, though I might want to get into the engineering side of things soon. On the side I like to learn about all things Linux, and that involves learning programming languages and development.</p>
   <p>This site may or may not get updated, I'm a bit fickle with that kind of stuff.</p>
