--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h3>Johnny Tirado | jclocks @ github</h3>
   <div class="navbar">
     <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-    <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
+    <a href="https://www.github.com/jclocks"><i class="fab fa-github-square"></i> Repositories</a>
     <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
     <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
   </div>
