--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h3>Johnny Tirado | jclocks @ github</h3>
   <div class="navbar">
     <a class="active" href="#"><i class="fas fa-house-user"></i> Home</a>
-    <a href="https://www.github.com/jclocks"><i class="fab fa-github-square"></i> Repositories</a>
+    <a href="https://www.github.com/jclocks?tab=repositories"><i class="fab fa-github-square"></i> Repositories</a>
     <a href="#"><i class="far fa-mailbox"></i> Contact</a>
   </div>
   <p>This is a simple static page to basically say hello. I might blog a bit on this. This is also meant to be a landing page to my various repos here.</p>
