--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="navbar">
     <a class="active" href="#"><i class="fas fa-house-user"></i> Home</a>
     <a href="https://www.github.com/jclocks?tab=repositories"><i class="fab fa-github-square"></i> Repositories</a>
-    <a href="#"><i class="far fa-mailbox"></i> Contact</a>
+    <a href="#"><i class="fas fa-mail-bulk"></i> Contact</a>
   </div>
   <p>This is a simple static page to basically say hello. I might blog a bit on this. This is also meant to be a landing page to my various repos here.</p>
   <p>My name is Johnny and I back up and revive servers for a living, and am a computer technician by career, though I might want to get into the engineering side of things soon. On the side I like to learn about all things Linux, and that involves learning programming languages and development.</p>
