--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     <a href="#"><i class="fas fa-mail-bulk"></i> Contact</a>
   </div>
   <p>This is a simple static page to basically say hello. I might blog a bit on this. This is also meant to be a landing page to my various repos here.</p>
-  <p>My name is Johnny and I back up and revive servers for a living, and am a computer technician by career, though I might want to get into the engineering side of things soon. On the side I like to learn about all things Linux, and that involves learning programming languages and development.</p>
   <p>This site may or may not get updated, I'm a bit fickle with that kind of stuff.</p>
+  
+  <h3>About Me:</h3>
+  <p>My name is Johnny and I back up and revive servers for a living, and am a computer technician by career, though I might want to get into the engineering side of things soon. On the side I like to learn about all things Linux, and that involves learning programming languages and development.</p>
+  <p>OS Proficiency: Windows 4/5, Linux 4/5, macOS 2/5, BSD Variants 3/5</p>
+  <p>Languages: Bash (able to read and create basic scripts), Python 3 (preferred language, trained, able to read and start to put together some applications), Javascript (some training, able to read through scripts), HTML5/CSS3 (fully trained and comfortable making sites and sheets), PHP (starting to learn), SQL (starting to learn), VB .net (classroom trained, not actively using), COBOL (classroom trained, not actively using)</p>
+  
 </body>
 </html>
