--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
   <h3>About Me:</h3>
   <p>My name is Johnny and I back up and revive servers for a living, and am a computer technician by career, though I might want to get into the engineering side of things soon. On the side I like to learn about all things Linux, and that involves learning programming languages and development.</p>
   <p>OS Proficiency: Windows 4/5, Linux 4/5, macOS 2/5, BSD Variants 3/5</p>
-  <p>Languages: Bash (able to read and create basic scripts), Python 3 (preferred language, trained, able to read and start to put together some applications), Javascript (some training, able to read through scripts), HTML5/CSS3 (fully trained and comfortable making sites and sheets), PHP (starting to learn), SQL (starting to learn), VB .net (classroom trained, not actively using), COBOL (classroom trained, not actively using)</p>
+  <p>Languages:</p>
+  <ul>
+    <li>Bash (able to read and create basic scripts)</li>
+    <li>Python 3 (preferred language, trained, able to read and start to put together some applications)</li>
+    <li>Javascript (some training, able to read through scripts)</li>
+    <li>HTML5/CSS3 (fully trained and comfortable making sites and sheets)</li>
+    <li>PHP (starting to learn)</li>
+    <li>SQL (starting to learn)</li>
+    <li>VB .net (classroom trained, not actively using)</li>
+    <li>COBOL (classroom trained, not actively using)</li>
+  </ul>
   
 </body>
 </html>
