--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <script src="https://kit.fontawesome.com/8832d74d07.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1>Hi!</h1>
-  <h3>Johnny Tirado | jclocks @ github</h3>
+  <h1>jt2.pw | jclocks.github.io</h1>
   <div class="navbar">
     <a class="active" href="#"><i class="fas fa-house-user"></i> Home</a>
     <a href="https://www.github.com/jclocks?tab=repositories"><i class="fab fa-github-square"></i> Repositories</a>
@@ -20,18 +19,6 @@
   
   <h3>About Me:</h3>
   <p>My name is Johnny and I back up and revive servers for a living, and am a computer technician by career, though I might want to get into the engineering side of things soon. On the side I like to learn about all things Linux, and that involves learning programming languages and development.</p>
-  <p>OS Proficiency: Windows 4/5, Linux 4/5, macOS 2/5, BSD Variants 3/5</p>
-  <p>Languages:</p>
-  <ul>
-    <li>Bash (able to read and create basic scripts)</li>
-    <li>Python 3 (preferred language, trained, able to read and start to put together some applications)</li>
-    <li>Javascript (some training, able to read through scripts)</li>
-    <li>HTML5/CSS3 (fully trained and comfortable making sites and sheets)</li>
-    <li>PHP (starting to learn)</li>
-    <li>SQL (starting to learn)</li>
-    <li>VB .net (classroom trained, not actively using)</li>
-    <li>COBOL (classroom trained, not actively using)</li>
-  </ul>
   
 </body>
 </html>
