--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
   <script src="https://kit.fontawesome.com/8832d74d07.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  
   <h1>jt2.pw | jclocks.github.io</h1>
+  
   <div class="navbar">
     <a class="active" href="#"><i class="fas fa-house-user"></i> Home</a>
-    <a href="https://www.github.com/jclocks?tab=repositories"><i class="fab fa-github-square"></i> Repositories</a>
-    <a href="#"><i class="fas fa-mail-bulk"></i> Contact</a>
+    <a href="https://www.github.com/jclocks?tab=repositories"><i class="fab fa-github-square"></i> Projects</a>
+    <a href="#"><i class="fas fa-blog"></i> Blog</a>
+    <a href="contact.html"><i class="fas fa-mail-bulk"></i> Contact</a>
   </div>
+  
   <p>This is a simple static page to basically say hello. I might blog a bit on this. This is also meant to be a landing page to my various repos here.</p>
   <p>This site may or may not get updated, I'm a bit fickle with that kind of stuff.</p>
   
