--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
     <a href="contact.html"><i class="fas fa-mail-bulk"></i> Contact</a>
   </div>
   
-  <p>This is a simple static page to basically say hello. I might blog a bit on this. This is also meant to be a landing page to my various repos here.</p>
+  <p>This is a simple static page to basically say hello. I might blog a bit on this. 
+     This is also meant to be a landing page to my various repos here.</p>
   <p>This site may or may not get updated, I'm a bit fickle with that kind of stuff.</p>
   
   <h3>About Me:</h3>
-  <p>My name is Johnny and I back up and revive servers for a living, and am a computer technician by career, though I might want to get into the engineering side of things soon. On the side I like to learn about all things Linux, and that involves learning programming languages and development.</p>
+  <p>I'm a computer technician from the Northeast US, and perform work reviving machines 
+    and helping complex backup issues for a living. I am also learning how to become a 
+    developer on the side and might eventually make my way into software engineering.</p>
   
 </body>
 </html>
