--- a/blog.html
+++ b/blog.html
@@ -14,11 +14,10 @@
   <div class="navbar">
     <a href="index.html"><i class="fas fa-house-user"></i> Home</a>
     <a href="https://www.github.com/jclocks?tab=repositories"><i class="fab fa-github-square"></i> Projects</a>
-    <a href="blog.html"><i class="fas fa-blog"></i> Blog</a>
-    <a class="active" href="contact.html"><i class="fas fa-mail-bulk"></i> Contact</a>
+    <a class="active" href="blog.html"><i class="fas fa-blog"></i> Blog</a>
+    <a href="contact.html"><i class="fas fa-mail-bulk"></i> Contact</a>
   </div>
   
-  <p>General inquiries: <a href="mailto:inquiries@jt2.pw">inquiries@jt2.pw</a></p>
-  
+  <p>Coming soon!</p>
 </body>
 </html>
