--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <h1>jt2.pw | jclocks.github.io</h1>
   
   <div class="navbar">
-    <a class="active" href="#"><i class="fas fa-house-user"></i> Home</a>
+    <a class="active" href="index.html"><i class="fas fa-house-user"></i> Home</a>
     <a href="https://www.github.com/jclocks?tab=repositories"><i class="fab fa-github-square"></i> Projects</a>
-    <a href="#"><i class="fas fa-blog"></i> Blog</a>
+    <a href="blog.html"><i class="fas fa-blog"></i> Blog</a>
     <a href="contact.html"><i class="fas fa-mail-bulk"></i> Contact</a>
   </div>
   
